gulp/sass/blocks/_search.scss
.search-overlay {
  background: rgba(255, 255, 255, 0.85);
  .modal-content {
    background-color: transparent;
    box-shadow: none;
    border: none;
    height: 50px;
  }
  .search {
    margin-top: 20px;
    background-color: transparent;
    &__btn {
      background-color: white;
    }
  }
  .input-group {
    width: 100%;
    border: 2px solid #49ae48;
  }
  .btn-close {
    color: #111;
    font-size: 46px;
    position: absolute;
    right: 20px;
    top: 7px;
    width: 50px;
    &:hover {
      cursor: pointer;
      color: #000;
    }
  }
  &.hide {
    .search {
      animation: 0.2s;
      animation-name: fadeOutUp;
    }
  }
}

.search {
  width: 100%;
  .form-control {
    border-radius: 0;
    border: none;
    font-size: 14px;
    box-shadow: none;
  }
  .input-group-addon {
    padding: 0;
    border: none;
    width: 60px;
    background-color: transparent;
  }
  &__btn {
    background-color: transparent;
    width: 100%;
    height: 46px;
    border-radius: 0;
    font-size: 34px;
    padding: 0;
  }
}

#search-modal {
  @media (max-width: $screen-sm) {

    .modal-dialog {
      width: 85%;
    }
    button.close {
      position: relative;
      left: 10px;
      top: 12px;
    }
    .search {
      margin-top: 0;
      &__btn {
        font-size: 28px;
      }
    }
  }
}

.ui-autocomplete {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1050;
  float: left;
  min-width: 160px;
  padding: 4px 0;
  margin: 0 0 10px 25px;
  list-style: none;
  background-clip: padding-box;
  overflow-y: auto;
}
.ui-autocomplete-category {
  padding: 0 15px;
  font-size: 16px;
  color: $black-1;
  display: block;
  font-weight: bold;
}
.ui-menu-item {
  & > a {
    display: block;
    padding: 5px 15px;
    color: $black-2;
    border-bottom: 1px solid #ddd;
    &:hover {
      color: $black-2;
      background-color: $gray-1;
    }
    b {
      background-color: rgba(255, 197, 134, 0.39);
      font-weight: 400;
      border-top: 1px solid rgb(255, 197, 134);
      border-bottom: 1px solid rgb(255, 197, 134);
    }
  }
  & > a.ui-corner-all {

    clear: both;
    font-weight: normal;
    line-height: 18px;
    color: #555555;
    white-space: nowrap;
    text-decoration: none;
  }
}
.ui-helper-hidden-accessible {
  display: none;
}

@keyframes fadeOutUp {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
    transform: translate3d(0, -100%, 0);
  }
}

